...
    "save_changes": "Save changes",
    "close_and_save": "Save and close",
    "add": "Add",
    "edit": "Edit",
    "balance": "Balance",
    "delete": "Delete",
    "account": "Account",
    "accounts": "Accounts",
    "categories": "Categories",
    "category": "Category",
    "today": "Today",
...
  },
  "STATS": {
    "title": "Statistics",
    "balance": "Balance",
    "final-balance": "Final balance",
...
  "RECURRENT-TRANSACTIONS": {
    "title": "Recurrent transactions",
    "title.short": "Rec. transactions",
    "empty": "It looks like you don't have any recurring transactions. Create a monthly, yearly, or weekly recurring transaction and it will appear here",
    "total-expense.title": "Total expense per period",
...
      "initial-balance": "Initial balance",
      "current-balance": "Current balance",
      "create": "Create account",
      "edit": "Edit account",
      "currency-not-found-warn": "You do not have information on exchange rates for this currency. 1.0 will be used as the default exchange rate. You can modify this in the settings",
...
    "currency-converter": "Currency converter",
    "currency": "Currency",
    "currency-manager": "Currency manager",
    "currency-manager.descr": "Configure your currency and its exchange rates with others",
    "preferred-currency": "Preferred/base currency",
    "change-preferred-currency-title": "Change preferred currency",
    "change-preferred-currency-msg": "All stats and budgets will be displayed in this currency from now on. Accounts and transactions will keep the currency they had. All saved exchange rates will be deleted if you execute this action. Do you wish to continue?",
...
      "equal-to-preferred-warn": "The currency cannot be equal to the user currency",
      "specify-a-currency": "Please specify a currency",
      "add": "Add exchange rate",
      "add-success": "Exchange rate added successfully",
      "edit": "Edit exchange rate",
...
    "exchange-rates": "Exchange rates",
    "empty": "Add exchange rates here so that if you have accounts in currencies other than your base currency our charts are more accurate",
    "select-a-currency": "Select a currency",
    "search-title": "Tap to search",
    "search-placeholder": "Search by name or by currency code"
...
    "display": {
      "one": "Label",
      "other": "Tags"
    },
    "FORM": {
...
    "without-tags": "Without tags",
    "select": "Select tags",
    "add": "Add tag",
    "create": "Create label",
    "create.success": "Label created successfully",
...
  "CATEGORIES": {
    "unknown": "Unknown category",
    "create": "Create category",
    "create.success": "Category created correctly",
    "new-category": "New category",
...
  },
  "BUDGETS": {
    "title": "Budgets",
    "repeated": "Recurring",
    "one-time": "Once",
...
      "name": "Budget name",
      "value": "Limit quantity",
      "create": "Add budget",
      "edit": "Edit budget",
      "negative-warn": "The budgets can not have a negative amount"
...
  "BACKUP": {
    "EXPORT": {
      "title": "Export your data",
      "title.short": "Export",
      "all": "Full backup",
      "all.descr": "Export all your data (accounts, transactions, budgets, settings...). Import them again at any time so you don't lose anything.",
      "transactions": "Transactions backup",
...
      "title": "Import your data",
      "title.short": "Import",
      "restore-backup": "Restore Backup",
      "restore-backup-descr": "Import a previously saved database from Monekin. This action will replace any current application data with the new data",
      "restore-backup-warn.description": "When importing a new database, you will lose all data currently saved in the app. It is recommended to make a backup before continuing. Do not upload here any file whose origin you do not know, upload only files that you have previously downloaded from Monekin",
      "restore-backup-warn.title": "Overwrite all data",
      "select-other-file": "Select other file",
      "tap-to-select-file": "Tap to select a file",
      "MANUAL-IMPORT": {
        "title": "Manual import",
        "descr": "Import transactions from a .csv file manually",
        "defaultAccount": "Default account",
...
        "titleColumn": "Title column",
        "steps": [
          "Select your file",
          "Column for quantity",
          "Column for account",
...
  },
  "SETTINGS": {
    "title_long": "Settings and appearance",
    "title_short": "Settings",
    "description": "App theme, texts and other general settings",
    "edit_profile": "Edit profile",
    "lang.section": "Language and texts",
    "lang.title": "App language",
    "lang.descr": "Language in which the texts will be displayed in the app",
    "locale": "Region",
...
    "first_day_of_week": "First day of week",
    "theme_and_colors": "Theme and colors",
    "theme": "Theme",
    "theme.auto": "Defined by the system",
    "theme.light": "Light",
    "theme.dark": "Dark",
    "amoled-mode": "AMOLED mode",
...
    "title_long": "More actions",
    "DATA": {
      "display": "Data",
      "display.descr": "Export and import your data so you don't lose anything",
      "delete-all": "Delete my data",
...
    },
    "ABOUT_US": {
      "display": "App information",
      "description": "Check out the terms and other relevant information about Monekin. Get in touch with the community by reporting bugs, leaving suggestions...",
      "LEGAL": {
...
    },
    "HELP_US": {
      "display": "Help us",
      "description": "Find out how you can help Monekin become better and better",
      "rate-us": "Rate us",
...
      "share.descr": "Share our app to friends and family",
      "share.text": "Monekin! The best personal finance app. Download it here",
      "thanks": "Thank you!",
      "thanks_long": "Your contributions to Monekin and other open source projects, big and small, make great projects like this possible. Thank you for taking the time to contribute.",
      "donate": "Make a donation",
...
