...
              child: const DisplayAppIcon(height: 80),
            ),
          ],
        ),
        const SizedBox(height: 12),
        Text(
          'Monekin',
          style: Theme.of(
            context,
          ).textTheme.headlineLarge!.copyWith(fontWeight: FontWeight.bold),
        ),
        const SizedBox(height: 8),
        Text(
...
